--- a/index.html
+++ b/index.html
@@ -1,42 +1,40 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Gemini AI Chatbot</title>
+    <title>AI Chatbot</title>
+    <style>
+        body { font-family: Arial; background:#f4f4f4; }
+        #chat { background:white; padding:10px; height:300px; overflow:auto; border:1px solid #ccc; }
+        input { width:80%; padding:10px; }
+        button { padding:10px; }
+    </style>
 </head>
 <body>
 
-<h2>Gemini AI Chatbot</h2>
-<div id="chat"></div>
+<h2>AI Based Chatbot</h2>
+
+<div id="chat"></div><br>
 
 <input id="msg" placeholder="Ask something">
 <button onclick="send()">Send</button>
 
 <script>
-const API_KEY = "AIzaSyA_1bVFM-4852wQRn3n8J-5LrYH5a_rCCA";
-
 async function send() {
-  const msgInput = document.getElementById("msg");
-  const chat = document.getElementById("chat");
-  const text = msgInput.value;
-  msgInput.value = "";
+    let input = document.getElementById("msg");
+    let chat = document.getElementById("chat");
+    let text = input.value;
+    input.value = "";
 
-  chat.innerHTML += `<p><b>You:</b> ${text}</p>`;
+    chat.innerHTML += "<p><b>You:</b> " + text + "</p>";
 
-  const response = await fetch(
-    "https://generativelanguage.googleapis.com/v1beta/models/gemini-1.5-flash:generateContent?key=" + API_KEY,
-    {
-      method: "POST",
-      headers: {"Content-Type": "application/json"},
-      body: JSON.stringify({
-        contents: [{ parts: [{ text: text }] }]
-      })
-    }
-  );
+    let res = await fetch("/chat", {
+        method: "POST",
+        headers: {"Content-Type": "application/json"},
+        body: JSON.stringify({message: text})
+    });
 
-  const data = await response.json();
-  const reply = data.candidates[0].content.parts[0].text;
-
-  chat.innerHTML += `<p><b>Bot:</b> ${reply}</p>`;
+    let data = await res.json();
+    chat.innerHTML += "<p><b>Bot:</b> " + data.reply + "</p>";
 }
 </script>
 
