--- a/index.html
+++ b/index.html
@@ -1,80 +1,165 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <title>Gemini AI Chatbot</title>
-    <style>
-        body {
-            font-family: "Segoe UI", sans-serif;
-            background: linear-gradient(135deg, #0f2027, #203a43, #2c5364);
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            height: 100vh;
-            margin: 0;
-        }
+<meta charset="UTF-8">
+<title>AI College Chatbot</title>
 
-        .chat-container {
-            background: #111;
-            width: 380px;
-            height: 520px;
-            border-radius: 15px;
-            display: flex;
-            flex-direction: column;
-            box-shadow: 0 15px 40px rgba(0,0,0,0.5);
-        }
+<style>
+body {
+    margin: 0;
+    font-family: 'Segoe UI', sans-serif;
+    background: linear-gradient(135deg, #1e3c72, #2a5298);
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
 
-        .chat-header {
-            background: #1f2933;
-            color: #00e676;
-            padding: 15px;
-            text-align: center;
-            font-size: 20px;
-            font-weight: bold;
-            border-radius: 15px 15px 0 0;
-        }
+.chat-container {
+    width: 380px;
+    height: 560px;
+    background: #ffffff;
+    border-radius: 15px;
+    display: flex;
+    flex-direction: column;
+    box-shadow: 0 20px 40px rgba(0,0,0,0.3);
+}
 
-        .chat-box {
-            flex: 1;
-            padding: 15px;
-            overflow-y: auto;
-            color: white;
-        }
+.chat-header {
+    background: #0f172a;
+    color: #38bdf8;
+    padding: 15px;
+    text-align: center;
+    font-size: 20px;
+    font-weight: bold;
+    border-radius: 15px 15px 0 0;
+}
 
-        .msg {
-            margin-bottom: 12px;
-            padding: 10px;
-            border-radius: 8px;
-            max-width: 80%;
-            font-size: 14px;
-        }
+.chat-sub {
+    font-size: 12px;
+    color: #cbd5f5;
+}
 
-        .user {
-            background: #00c853;
-            color: black;
-            margin-left: auto;
-        }
+.chat-box {
+    flex: 1;
+    padding: 15px;
+    overflow-y: auto;
+    background: #f8fafc;
+}
 
-        .bot {
-            background: #263238;
-            color: #eee;
-            margin-right: auto;
-        }
+.message {
+    max-width: 80%;
+    margin-bottom: 12px;
+    padding: 10px 14px;
+    border-radius: 12px;
+    animation: fadeIn 0.3s ease-in;
+    font-size: 14px;
+}
 
-        .chat-input {
-            display: flex;
-            padding: 12px;
-            border-top: 1px solid #333;
-        }
+.user {
+    background: #38bdf8;
+    color: black;
+    margin-left: auto;
+}
 
-        input {
-            flex: 1;
-            padding: 10px;
-            border-radius: 8px;
-            border: none;
-            outline: none;
-            font-size: 14px;
-        }
+.bot {
+    background: #e5e7eb;
+    color: black;
+    margin-right: auto;
+}
 
-        button {
-            margin-left
+@keyframes fadeIn {
+    from { opacity: 0; transform: translateY(10px); }
+    to { opacity: 1; transform: translateY(0); }
+}
+
+.chat-input {
+    display: flex;
+    padding: 12px;
+    border-top: 1px solid #e5e7eb;
+}
+
+input {
+    flex: 1;
+    padding: 10px;
+    border-radius: 8px;
+    border: 1px solid #cbd5e1;
+    outline: none;
+}
+
+button {
+    margin-left: 8px;
+    padding: 10px 16px;
+    border: none;
+    border-radius: 8px;
+    background: #2563eb;
+    color: white;
+    cursor: pointer;
+}
+
+button:hover {
+    background: #1e40af;
+}
+
+.footer {
+    text-align: center;
+    font-size: 11px;
+    color: #64748b;
+    padding-bottom: 6px;
+}
+</style>
+</head>
+
+<body>
+
+<div class="chat-container">
+    <div class="chat-header">
+        🤖 AI College Chatbot
+        <div class="chat-sub">CSE (IoT) • Minor Project</div>
+    </div>
+
+    <div class="chat-box" id="chatBox">
+        <div class="message bot">Hello! I am your AI-based college assistant.</div>
+    </div>
+
+    <div class="chat-input">
+        <input type="text" id="userInput" placeholder="Ask your question here..." />
+        <button onclick="sendMessage()">Send</button>
+    </div>
+
+    <div class="footer">
+        Developed by CSE (IoT) – 3rd Year
+    </div>
+</div>
+
+<script>
+function addMessage(text, sender) {
+    const chatBox = document.getElementById("chatBox");
+    const div = document.createElement("div");
+    div.className = "message " + sender;
+    div.innerText = text;
+    chatBox.appendChild(div);
+    chatBox.scrollTop = chatBox.scrollHeight;
+}
+
+async function sendMessage() {
+    const input = document.getElementById("userInput");
+    const text = input.value.trim();
+    if (!text) return;
+
+    addMessage(text, "user");
+    input.value = "";
+
+    const response = await fetch("/chat", {
+        method: "POST",
+        headers: { "Content-Type": "application/json" },
+        body: JSON.stringify({ message: text })
+    });
+
+    const data = await response.json();
+    addMessage(data.reply, "bot");
+}
+</script>
+
+</body>
+</html>
